--- a/src/components/search-box/search-box.styles.scss
+++ b/src/components/search-box/search-box.styles.scss
@@ -1,8 +1,18 @@
 .search {
   display: flex;
   font-size: 20px;
-  border: solid;
-  border-color: rgb(114, 100, 65);
+  border: none;
+  border-color: inherit;
   padding: 10px;
   width: 100%;
+}
+
+.search-homepage {
+  display: flex;
+  margin: 0 auto;
+  font-size: 20px;
+  border: none;
+  border-radius: 15px;
+  padding: 10px;
+  width: 20%;
 }
