--- a/src/components/side-bar/side-bar.styles.scss
+++ b/src/components/side-bar/side-bar.styles.scss
@@ -19,7 +19,7 @@
 }
 
 .sidebar-menu {
-  background-color: rgb(58, 48, 24);
+  background-color: rgb(116, 116, 116);
   width: 270px;
   height: 100vh;
   display: flex;
@@ -46,7 +46,7 @@ li {
 
 .sidebar-item {
   text-decoration: none;
-  color: #f5f5f5;
+  color: #fff;
   font-size: 18px;
   width: 95%;
   // height: 100%;
@@ -66,7 +66,7 @@ li {
 }
 
 .sidebar-toggle {
-  background-color: rgb(58, 48, 24);
+  background-color: rgb(116, 116, 116);
   width: 100%;
   height: 80px;
   display: flex;
