--- a/src/pages/homepage/homepage.styles.scss
+++ b/src/pages/homepage/homepage.styles.scss
@@ -10,17 +10,34 @@
     cursor: pointer;
     background-color: #1a83ff;
   }
-}
 
-.input-region {
-  padding-top: 1rem;
-  justify-content: center;
-  font-family: 'Fira Code';
-  font-size: 1.7rem;
-}
+  .regions {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    justify-content: space-around;
+  }
 
-.input-box {
-}
+  .container {
+    padding: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+  }
 
-.input-label {
+  .input {
+  }
+
+  .input:hover {
+    cursor: pointer;
+  }
+  .input:hover ~ .checkmark {
+    background-color: #ffffff;
+    border-radius: 15px;
+  }
+  .container input:checked ~ .checkmark {
+    background-color: #ffffff;
+    border-radius: 15px;
+  }
 }
