--- a/src/components/country/country.styles.scss
+++ b/src/components/country/country.styles.scss
@@ -1,16 +1,59 @@
-.country {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  font-size: 1rem;
-  width: 450px;
-}
+.country-container {
+  .country {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    font-size: 1rem;
+    width: 450px;
+  }
 
-.flag-page {
-  width: 2rem;
-  height: 1.5rem;
-}
+  .flag-page {
+    width: 2rem;
+    height: 1.5rem;
+  }
 
-.country:hover {
-  background-color: #fff;
+  .country:hover {
+    background-color: #fff;
+  }
+
+  .btn-info {
+    padding: 2px;
+    font-weight: bold;
+    font-size: 15px;
+    border-radius: 5px;
+    margin: 5px;
+  }
+
+  .btn:hover {
+    cursor: pointer;
+    color: #fff;
+    background-color: grey;
+  }
+
+  .btn-add {
+    padding: 0 2px 0 2px;
+    font-weight: bold;
+    font-size: 18px;
+    border-radius: 5px;
+    margin: 5px;
+  }
+
+  .countryInfo-menu.active {
+    opacity: 1;
+    display: block;
+  }
+
+  .countryInfo-menu {
+    display: none;
+    position: absolute;
+    box-sizing: border-box;
+    padding: 20px;
+    border-radius: 15px;
+    background-color: rgb(223, 222, 222);
+  }
+
+  .flag-info {
+    width: 160px;
+    height: 100px;
+  }
 }
