--- a/src/components/side-bar/side-bar.styles.scss
+++ b/src/components/side-bar/side-bar.styles.scss
@@ -81,3 +81,17 @@ span {
 .flag-item {
   width: 2rem;
 }
+
+.btn-remove {
+  padding: 0 3px 0 3px;
+  font-weight: bold;
+  font-size: 18px;
+  border-radius: 5px;
+  margin: 5px;
+}
+
+.btn:hover {
+  cursor: pointer;
+  color: #fff;
+  background-color: grey;
+}
